--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "sass": "^1.60.0",
     "vite": "^4.2.0",
     "vite-plugin-svgr": "^3.2.0",
-    "vitest": "^0.31.0"
+    "vitest": "^0.31.0",
+    "yup": "^1.2.0"
   }
 }
